force-app/main/default/objects/Investment_Fee_Schedule__c/Investment_Fee_Schedule__c.object-meta.xml
<CustomObject>
    <label>Investment Fee Schedule</label>
    <nameField>
        <displayFormat>IFS-{000000}</displayFormat>
        <label>Investment Fee Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Fee Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>