force-app/main/default/objects/Investment_Fee_Schedule__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Please key in any additional description related to Investment Fee Schedule</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>