force-app/main/default/objects/Investment_Fee_Schedule__c/fields/DurOfBasis__c.field-meta.xml
<CustomField>
    <fullName>DurOfBasis__c</fullName>
    <formula>TEXT( IF__r.FeeS__r.Dur__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please select the duration applicable.</inlineHelpText>
    <label>Duration Of Basis</label>
    <type>Text</type>
</CustomField>