force-app/main/default/objects/Investment_Fee_Schedule__c/fields/FeeAmt__c.field-meta.xml
<CustomField>
    <fullName>FeeAmt__c</fullName>
    <inlineHelpText>Total Fee Amount against the Investment Fee Schedule</inlineHelpText>
    <label>Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>