force-app/main/default/objects/Investment_Fee_Schedule__c/fields/FeeTy__c.field-meta.xml
<CustomField>
    <fullName>FeeTy__c</fullName>
    <formula>TEXT(IF__r.FeeS__r.FTy__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please select the fee type aganist the fee.</inlineHelpText>
    <label>Fee Type</label>
    <type>Text</type>
</CustomField>