force-app/main/default/objects/Investment_Fee_Schedule__c/fields/FixedFee__c.field-meta.xml
<CustomField>
    <fullName>FixedFee__c</fullName>
    <formula>IF__r.FeeS__r.Ffee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please key in the Fixed fee amount applicable for the fee schedule.</inlineHelpText>
    <label>Fixed Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>