force-app/main/default/objects/Investment_Fee_Schedule__c/fields/ICA__c.field-meta.xml
<CustomField>
    <fullName>ICA__c</fullName>
    <formula>IF__r.ICA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a currency field that shows the Investment charges that the Account will pay</inlineHelpText>
    <label>Investment Charges Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>