force-app/main/default/objects/Investment_Fee_Schedule__c/fields/IF__c.field-meta.xml
<CustomField>
    <fullName>IF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a Lookup field and the value wil be populated from the Investment Fee. Select via Lookup or create New</inlineHelpText>
    <label>Investment Fee</label>
    <referenceTo>Investment_Fee__c</referenceTo>
    <relationshipLabel>Investment Fee Schedule</relationshipLabel>
    <relationshipName>Investment_Fee_Schedule1</relationshipName>
    <type>Lookup</type>
</CustomField>