force-app/main/default/objects/Investment_Fee_Schedule__c/fields/PAC__c.field-meta.xml
<CustomField>
    <fullName>PAC__c</fullName>
    <formula>IF__r.PAC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a Formula field that shows the Profilt charges paid on this investment</inlineHelpText>
    <label>Profit Amount Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>