force-app/main/default/objects/Investment_Fee_Schedule__c/fields/PV__c.field-meta.xml
<CustomField>
    <fullName>PV__c</fullName>
    <formula>IF__r.PV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Present investmnet value (Investmnet Amount + Profit) in dollar amount</inlineHelpText>
    <label>Present value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>