force-app/main/default/objects/Investment_Fee_Schedule__c/fields/PVC__c.field-meta.xml
<CustomField>
    <fullName>PVC__c</fullName>
    <formula>IF__r.PVC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Present value is greater than Threshold amount((Present Value - Threshold Amount)*Threshold Profit Share)</inlineHelpText>
    <label>Present Value Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>