force-app/main/default/objects/Investment_Fee_Schedule__c/fields/ThrAmt__c.field-meta.xml
<CustomField>
    <fullName>ThrAmt__c</fullName>
    <formula>IF__r.TAmt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The maximum threshold amount against the investment</inlineHelpText>
    <label>Threshold Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>