force-app/main/default/objects/Investment_Fee_Schedule__c/fields/ThrMul__c.field-meta.xml
<CustomField>
    <fullName>ThrMul__c</fullName>
    <formula>IF__r.FeeS__r.TMul__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please key in the threshold multiplier, if applicable.</inlineHelpText>
    <label>Threshold Multiplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>