force-app/main/default/objects/Investment_Fee_Schedule__c/fields/ThrProfitShare__c.field-meta.xml
<CustomField>
    <fullName>ThrProfitShare__c</fullName>
    <formula>IF__r.FeeS__r.TPShare__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please key in the threshold profit share %, if applicable.</inlineHelpText>
    <label>Threshold Profit Share %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>